myMoovies : step 1 : bundler

--- a/fiche-02/mymoovies/src/index.html
+++ b/fiche-02/mymoovies/src/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <header>myMoovies</header>
-    <main><p> test</p></main>
+    <header></header>
+    <main>Replace with your page content</main>
     <footer></footer>
   </body>
 </html>
