myMoovies : step 2 : dynamic homepage

--- a/fiche-02/mymoovies/src/index.html
+++ b/fiche-02/mymoovies/src/index.html
@@ -9,7 +9,9 @@
 
   <body>
     <header></header>
-    <main>Replace with your page content</main>
+    <main id="page">
+
+    </main>
     <footer></footer>
   </body>
 </html>
