--- a/fiche-02_bis/myMoovies/src/index.html
+++ b/fiche-02_bis/myMoovies/src/index.html
@@ -9,25 +9,7 @@
 
   <body>
     <header></header>
-    <main>
-      <div class="text-center">
-        <h3> Welcome to myMoovies !</h3>
-        <p>Here you can find a selection of our favorite moovies ; )</p>
-        <div class="pb-3">
-          <img 
-          class="img-thumbnail w-50"
-          src="./img/conjuring3.jpg"
-          alt="Conjuring3 image"/>
-        </div>
-
-        <div class="pb-3">
-          <img
-          class="img-thumbnail w-50"
-          src="./img/fastAndFurious9.jpg"
-          alt="fastAndFurious9 image"/>
-        </div>
-      </div>
-    </main>
+    <main></main>
     <footer></footer>
   </body>
 </html>
